cmake_minimum_required(VERSION 3.10)

# 项目名称
project(gitlite)

# 设置 C++ 标准为 C++17
# 推荐使用 C++17，因为它对文件系统 (filesystem) 和字符串处理支持更好
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# ------------------------------------------------------------------------------
# 1. 设置头文件路径
# ------------------------------------------------------------------------------
# 告诉 CMake 编译时要去 ./include 目录下寻找 .h 头文件
include_directories(include)

# ------------------------------------------------------------------------------
# 2. 收集源文件
# ------------------------------------------------------------------------------
# 自动查找 src 目录下的所有 .cpp 文件，并将列表存入 SRC_FILES 变量
# 这样你以后在 src 里添加新文件时，不需要修改这里，重新 cmake .. 即可
file(GLOB SRC_FILES "src/*.cpp")

# 添加主函数文件 main.cpp
# 注意：根据截图，src 里没有 main.cpp，所以我假设 main.cpp 在项目根目录下
# 如果 main.cpp 其实也在 src 里，这行可以删掉（上面的 GLOB 会自动包含它）
list(APPEND SRC_FILES "main.cpp")

# ------------------------------------------------------------------------------
# 3. 生成可执行文件
# ------------------------------------------------------------------------------
# 指示 CMake 使用 SRC_FILES 里的所有源码生成一个名为 gitlite 的可执行程序
add_executable(gitlite ${SRC_FILES})

# ------------------------------------------------------------------------------
# 4. (可选) 链接库
# ------------------------------------------------------------------------------
# 如果你在 Utils 里使用了 <openssl/sha.h> 等外部库，可能需要链接 OpenSSL
# 但根据你的描述，SHA1 似乎是内置实现的，所以通常不需要额外链接库
# if(UNIX)
#    target_link_libraries(gitlite pthread) # 有些环境可能需要 pthread
# endif()